SimpleWeb/simpleweb-pod.yml

apiVersion: v1
kind: Pod
metadata:
  name: simpleweb-pod
spec:
  containers:
    - name: simpleweb
      image: simpleweb:v0.1
      ports:
        - containerPort: 9080
          name: http
          protocol: TCP
